# r2d2

./: README.md
r2d2_bringup/: CMakeLists.txt  package.xml
r2d2_bringup/launch/: bringup.launch  bringup_office.launch
r2d2_control/: CMakeLists.txt  package.xml
r2d2_control/config/: joint_state.yaml
r2d2_control/launch/: joint_state_controller.launch
r2d2_control/rqt/: r2d2.perspective
r2d2_description/: CMakeLists.txt  package.xml
r2d2_description/launch/: r2d2_publisher.launch
r2d2_description/rviz/: r2d2_description.rviz
r2d2_description/urdf/: r2d2.gazebo.xacro  r2d2.gripper.xacro  r2d2.gripper_finger.xacro  r2d2.head.xacro  r2d2.inertia.xacro  r2d2.laser.xacro  r2d2.leg.xacro  r2d2.materials.xacro  r2d2.structure.xacro  r2d2.urdf.xacro  r2d2.wheel.xacro
r2d2_gazebo/: CMakeLists.txt  package.xml
r2d2_gazebo/launch/: r2d2_office_world.launch  r2d2_world.launch
r2d2_gazebo/worlds/: r2d2.world  r2d2_office.world
r2d2_navigation/: CMakeLists.txt  package.xml
r2d2_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
r2d2_navigation/launch/: move_base.launch
r2d2_navigation/maps/: test_map.pgm  test_map.yaml
r2d2_navigation/rviz/: navigation.rviz
