<?xml version="1.0"?>
<package>
	<name>r2d2_control</name>
	<version>1.0.0</version>
	<description>R2D2 Control</description>

	<maintainer email="alberto@lcad.inf.ufes.br">Alberto Ferreira De Souza</maintainer>

	<license>BSD</license>
	
	<!-- <url type="repository">https://github.com/albertodesouza/r2d2</url> -->
	<author email="alberto@lcad.inf.ufes.br">Alberto Ferreira De Souza</author>
	
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>controller_manager</run_depend>
	<run_depend>effort_controllers</run_depend>	
	<run_depend>joint_trajectory_controller</run_depend>	

	<export>
	</export>
</package>
